# esp32-walktrough-reader

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
flash_fs/txt/: ff10.txt
main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.c
